--- a/darei/cfg/train/UnimalPPO.yaml
+++ b/darei/cfg/train/UnimalPPO.yaml
@@ -66,7 +66,7 @@ params:
     entropy_coef: 0.0
     truncate_grads: False
     e_clip: 0.2
-    horizon_length: 16
+    horizon_length: ${resolve_default:16,${....horizon_length}}
     minibatch_size: 32768
     mini_epochs: 4
     critic_coef: 2
